--- a/CoCaro/CoCaro.csproj
+++ b/CoCaro/CoCaro.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="LAN.cs" />
     <Compile Include="OCo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
